2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/setugid.c: Updated comments.

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/failure.h, libmisc/failure.c, src/login.c: Added
	username as first parameter of failtmp to avoid issues with
	non-null terminated ut_user, unavailability of ut_user, incomplete
	username (that should not happen currently).

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* libmisc/ttytype.c: Add brackets and parenthesis.
	* libmisc/ttytype.c: Avoid assignments in comparisons.

2009-04-20  Nicolas François  <nicolas.francois@centraliens.net>

	* lib/pwio.c, lib/shadowio.c, lib/groupio.c, lib/sgroupio.c: Fill
	the password fields with zeros before they are freed.

2009-04-19  Changwoo Ryu  <cwryu@debian.org>

	* po/ko.po: Updated Korean translation.

2009-04-19  Nicolas François  <nicolas.francois@centraliens.net>

	* NEWS, src/login.c: Also check if the authentication token of the
	user has to be updated in case the user was already authenticated.

2009-04-19  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: fflg is already restricted to root. Move
	pam_acct_mgmt(), in case of fflg, earlier. This is equivalent and
	simplifies the code.

2009-04-19  Paul Szabo  <psz@maths.usyd.edu.au>

	* libmisc/utmp.c: Always call endutent or endutxent when setutent
	or setutxent were used.

2009-04-19  Nicolas François  <nicolas.francois@centraliens.net>

	* src/login.c: Added comment to make sure PAM_RHOST or PAM_TTY do
	not get set to unsanitized values.

2009-04-17  Paul Szabo  <psz@maths.usyd.edu.au>

	* NEWS, src/login.c: Do not trust the current utmp entry's ut_line
	to set PAM_TTY.
	* libmisc/utmp.c: Do not trust the current utmp entry's ut_line.
	Always set ut_line based on ttyname(0).

2009-04-15  Nicolas François  <nicolas.francois@centraliens.net>

	* po/shadow.pot, man/po/shadow-man-pages.pot: Regenerated.
	* po/*.po, man/po/*.po: Updated PO files.